--- a/src/app/logged/components/bottom-nav/bottom-nav.component.html
+++ b/src/app/logged/components/bottom-nav/bottom-nav.component.html
@@ -7,11 +7,11 @@
           </span>
         <span class="nav__text">Inicio</span>
     </a>
-    <a [routerLink]="['catalogos']" class="nav__link" routerLinkActive="active">
+    <a [routerLink]="['pedidos']" class="nav__link" routerLinkActive="active">
         <span class="nav-icon">
-            <fa-icon [icon]="iconCatalogos" routerLinkActive="nav-icon-active"></fa-icon>
+            <fa-icon [icon]="iconPedidos" routerLinkActive="nav-icon-active"></fa-icon>
           </span>
-        <span class="nav__text">Catálogos</span>
+        <span class="nav__text">Pedidos</span>
     </a>
     <a [routerLink]="['agregar']" class="nav__link" routerLinkActive="active">
         <span class="nav-icon">
