--- a/src/app/logged/components/agregar/agregar.component.css
+++ b/src/app/logged/components/agregar/agregar.component.css
@@ -1,6 +1,11 @@
 .background {
     padding-top: 55px;
-    /* padding-bottom: 600px; */
+    padding-bottom: 800px;
     background: rgb(202, 217, 243);
     background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
+}
+
+.abajo {
+    position: relative;
+    z-index: 0;
 }
