--- a/src/app/logged/components/agregar/components/agregar-producto/agregar-producto.component.css
+++ b/src/app/logged/components/agregar/components/agregar-producto/agregar-producto.component.css
@@ -1,3 +1,23 @@
+.modal {
+    position: fixed;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.showing {
+    display: flex;
+}
+
+.not-showing {
+    display: none;
+}
+
 .card-producto {
     color: #061058;
     background-color: white;
@@ -6,8 +26,15 @@
     border: none;
     z-index: 0;
     max-width: 50em;
-    margin: auto;
     filter: drop-shadow(0px 40px 64px rgba(6, 16, 88, 0.3));
+    margin: auto;
+}
+
+@media(max-height: 720px) {
+    .card-producto {
+        max-height: 30em;
+        overflow: auto;
+    }
 }
 
 .title {
