--- a/src/app/logged/components/controls/dropdown/dropdown.component.css
+++ b/src/app/logged/components/controls/dropdown/dropdown.component.css
@@ -1,11 +1,14 @@
 .dropdown {
-    position: relative;
+    font-family: 'Poppins', sans-serif;
     display: inline-block;
     margin: 1em;
-    z-index: 2;
+    z-index: 1;
+    width: 100%;
+    max-width: 18em;
 }
 
 .dropdown-button {
+    position: relative;
     background-color: white;
     height: 4em;
     display: inline-block;
@@ -15,10 +18,8 @@
     border: none;
     color: #061058;
     outline: none;
-    width: 300px;
-    font-family: 'Poppins', sans-serif;
+    width: inherit;
     border-radius: 1em;
-    box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
     transition-duration: .2s;
 }
 
@@ -32,15 +33,14 @@
 }
 
 .dropdown-content {
-    visibility: hidden;
     position: absolute;
     background-color: white;
-    width: 300px;
+    width: inherit;
     font-family: 'Poppins', sans-serif;
     border-radius: 0em 0em 1em 1em;
     text-align: center;
-    z-index: 3;
     opacity: 0;
+    visibility: hidden;
     box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
     transition-duration: 0.2s;
 }
@@ -65,4 +65,8 @@
 
 .last {
     border-radius: 0em 0em 1em 1em;
+}
+
+.sombra {
+    box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
 }
