--- a/src/app/logged/components/top-bar/top-bar.component.html
+++ b/src/app/logged/components/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <header class="top-bar">
-    <img class="top-img" src="https://www.westernunion.com/content/dam/wu/jm/responsive/send-money-in-person-from-jamaica-resp.png">
+    <img class="top-img" [src]="fotoPerfil">
     <h5 class="center">{{ nombre }}</h5>
     <button class="button-exit">
         <fa-icon [icon]="logoutIcon" (click)="logout()"></fa-icon>
