--- a/src/app/logged/components/controls/dropdown/dropdown.component.css
+++ b/src/app/logged/components/controls/dropdown/dropdown.component.css
@@ -21,6 +21,7 @@
     width: inherit;
     border-radius: 1em;
     transition-duration: .2s;
+    z-index: 0;
 }
 
 .dropdown-button:hover {
@@ -40,6 +41,7 @@
     border-radius: 0em 0em 1em 1em;
     text-align: center;
     opacity: 0;
+    z-index: 2;
     visibility: hidden;
     box-shadow: 0px 10px 64px 0px rgba(6, 16, 88, 0.3);
     transition-duration: 0.2s;
