--- a/src/app/logged/components/resumen/resumen.component.css
+++ b/src/app/logged/components/resumen/resumen.component.css
@@ -1,4 +1,6 @@
 .background {
+    padding-top: 55px;
+    padding-bottom: 900px;
     background: rgb(240, 240, 246);
     background: linear-gradient(0deg, rgba(240, 240, 246, 1) 0%, rgba(255, 255, 255, 1) 100%);
 }
@@ -7,6 +9,28 @@
     display: flex;
     overflow-x: auto;
     filter: drop-shadow(0px 40px 64px rgba(6, 16, 88, 0.3));
+}
+
+.card-resumen {
+    color: #061058;
+    font-family: 'Poppins', sans-serif;
+    display: block;
+    max-height: 25em;
+    font-weight: 600;
+    border: none;
+    z-index: 0;
+    border-radius: 32px 32px 32px 32px;
+    box-shadow: 0px 80px 64px -1px rgba(6, 16, 88, 0.17);
+}
+
+.title {
+    font-weight: 600;
+    color: #DCF8FF;
+}
+
+.fondo {
+    border-radius: 32px 32px 0 0;
+    background-color: #0000AF;
 }
 
 .chip {
@@ -22,12 +46,15 @@
     margin-bottom: 5px;
     margin-right: 5px;
     cursor: pointer;
+    transition: .2s;
+}
+
+.chip:hover {
+    background-color: #EEEEEE;
 }
 
 .chip:active {
-    outline: none;
-    background-color: #26a69a;
-    color: #fff
+    background-color: #EEEEEE;
 }
 
 .abarca {
