--- a/src/app/logged/components/resumen/resumen.component.html
+++ b/src/app/logged/components/resumen/resumen.component.html
@@ -1,17 +1,15 @@
-<!-- <app-top-bar></app-top-bar> -->
-<br>
-<br>
-<br>
 <div class="row h-100 text-center background animtated fadeInDown fast" style="margin: auto;">
-
-    <div class="col-md-12">
+    <div class="col-md-12 text-center">
+        <br>
         <h4 style="color: #061058">Seleccione una categoría</h4>
+        <br>
         <div class="categorias-container justify-content-center align-items-center">
             <div *ngFor="let categoria of Categorias; let i = index" [ngClass]="categoria.clase">
                 {{ categoria.nombre }}
             </div>
         </div>
-        <div class="card">
+        <br>
+        <div class="card card-resumen">
             <div class="card-header fondo">
                 <div class="btn-group btn-group-toggle abarca" data-toggle="buttons" role="group">
                     <label class="btn btn-light">
