Cambios al sitio del administrador

--- a/src/app/administrador/components/controls/modal/modal.component.html
+++ b/src/app/administrador/components/controls/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div #modal class="modal" [ngClass]="showing? 'showing': 'not-showing'">
     <div id="modal-content" class="modal-content animate__animated animate__zoomIn animate__faster">
         <fa-icon #close [icon]="closeIcon" class="close"></fa-icon>
-        <fa-icon #image [icon]="errorIcon" class="image error"></fa-icon>
+        <fa-icon #image [icon]="errorIcon" class="image" [ngClass]="type"></fa-icon>
         <br>
         <br>
         <p class="message">{{ message }}</p>
