--- a/src/app/logged/components/pedidos/pedidos.component.css
+++ b/src/app/logged/components/pedidos/pedidos.component.css
@@ -10,17 +10,20 @@
     background: linear-gradient(0deg, rgba(202, 217, 243, 1) 0%, rgba(234, 242, 255, 1) 100%);
 }
 
- .borde {
-     border: 1px solid red;
- }
+.borde {
+    border: 1px solid red;
+}
 
- .boton-toggle {
+.boton-container {
+    filter: drop-shadow(0px 40px 64px rgba(6, 16, 88, 0.4));
+}
+
+.boton-toggle {
     width: 9em;
     color: #061058;
     background-color: #ffffff;
     outline: none !important;
     cursor: pointer;
-    box-shadow: 0px 20px 64px -1px rgba(6, 16, 88, 0.2);
 }
 
 .boton-toggle:active,
@@ -45,7 +48,66 @@
     background-color: #d0d0d0;
 }
 
-
 input[type="radio"] {
     -webkit-appearance: none;
+}
+
+.tabla {
+    margin: auto;
+    background-color: white;
+    font-family: 'Poppins', sans-serif;
+    color: #061058;
+    max-height: 16em;
+    border-radius: 2em;
+    overflow: auto;
+}
+
+.header {
+    background-color: #0000AF;
+}
+
+.header th {
+    color: white
+}
+
+tr {
+    display: block;
+}
+
+th {
+    display: inline-block;
+    text-align: center;
+}
+
+.fila {
+    background-color: white;
+    transition-duration: .2s;
+}
+
+.fila:hover {
+    background-color: #DDDDDD;
+}
+
+.nombre {
+    font-weight: 500;
+    width: 30%;
+    display: inline-block;
+}
+
+.precio {
+    font-weight: 500;
+    width: 30%;
+    display: inline-block;
+}
+
+.cantidad {
+    font-weight: 500;
+    width: 20%;
+    display: inline-block;
+}
+
+.pedido {
+    font-weight: 500;
+    width: 20%;
+    display: inline-block;
 }
