--- a/src/app/logged/components/pedidos/pedidos.component.html
+++ b/src/app/logged/components/pedidos/pedidos.component.html
@@ -5,10 +5,10 @@
             </div>
             <div class="col-md-4 boton-container">
                 <label class="btn boton-toggle izq">
-                    <input type="radio" value="Pendientes" name="role" (click)="cambiarTipoPedido('pendientes')">Pendientes
+                    <input type="radio" value="Pendiente" name="role" (click)="cambiarTipoPedido('Pendiente')">Pendientes
                 </label>
                 <label class="btn boton-toggle der">
-                    <input type="radio" value="Completados" name="role" (click)="cambiarTipoPedido('completados')">Completados
+                    <input type="radio" value="Completado" name="role" (click)="cambiarTipoPedido('Completado')">Completados
                 </label>
             </div>
             <div class="col-md-4">
